# whisper

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DEPLOY.md  P2P_TROUBLESHOOTING.md  README.md  RELAYS.md  SECURITY.md  tips.md
.github/workflows/: release.yml
Formula/: t-chat.rb  whisper.rb
chocolatey/: t-chat.nuspec  whisper.nuspec
chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
scripts/: release.sh
src/: hole_punch.rs  main.rs  relay.rs  stun.rs  upnp.rs
src/cli/: mod.rs  p2p.rs
src/crypto/: mod.rs
src/invite/: mod.rs
src/p2p/: mod.rs
src/p2p_direct/: mod.rs
src/session/: mod.rs
src/stun/: mod.rs
