[package]
name = "t-chat"
version = "0.1.0"
edition = "2021"
description = "A simple, secure, and private P2P chat CLI with E2E encryption"
license = "MIT"
repository = "https://github.com/phpfc/t-chat"
keywords = ["chat", "p2p", "cli", "encryption", "e2e"]
categories = ["command-line-utilities", "cryptography", "network-programming"]

[dependencies]
tokio = { version = "1.42", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
ring = "0.17"
base64 = "0.22"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
sha2 = "0.10"
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
stun_codec = "0.3"
bytecodec = "0.4"
qrcode = "0.14"
igd-next = "0.14"
